--- a/materials.html
+++ b/materials.html
@@ -62,7 +62,7 @@
         <ul>
 		<li> On the Behavior of the Mixed-Integer SMS-EMOA (GECCO'23 AABOH workshop presentation; Lisbon, Portugal, July 2023) <a href="gecco2023_AABOH-ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Mind the Gap (Dagstuhl Seminar on Challenges in Benchmarking Optimization Heuristics, 23251, June 2023) <a href="MindTheGap_presentationDagstuhl23251_ShirOM.pdf" target="_new">pdf</a></li>
-		<li> Perspective: Towards AI Research Agents in the Experimental Sciences <a href="ShirOM-May2023___Perspective___Towards_Independent_AI_Guided_Scientific_Experimental_Research.pdf" target="_new">preprint</a> (July 2023)</li>
+		<li> Towards AI Research Agents in the Chemical Sciences (ChemRxiv preprint) <a href="https://chemrxiv.org/engage/chemrxiv/article-details/65ae48a466c1381729009633" target="_new">ChemRxiv</a></li>
 		<li> Lessons Learned Report: Super-Resolution for Detection Tasks in Engineering Problem-Solving <a href="https://arxiv.org/abs/2303.00364" target="_new">arXiv</a> </li>
 		<li> GWANN: Implementing deep learning in genome wide association studies (bioRxiv preprint with Nimrod Ashkenazy, Martin Feder, and Sariel Hubner) <a href="https://www.biorxiv.org/content/10.1101/2022.06.01.494275v1?rss=1" target="_new">bioRxiv</a> </li>
 		<li> Introductory Mathematical Programming for EC (GECCO'22 tutorial; Boston MA, USA, July 2022) <a href="IntroMathProg4EC_gecco2022_ShirOM.pdf" target="_new">pdf</a></li>
@@ -83,7 +83,7 @@
      </ul>
             <h1>Links</h1>
                 <ul>
-				<li> <a href="https://gecco-2023.sigevo.org/Workshops#QuantOpt" target="_new">GECCO 2023: The Genetic and Evolutionary Computation Conference</a>, Lisbon, Portugal, July 2023; <a href="https://sites.google.com/view/quantopt2023" target="_new">Quantum Optimization Workshop</a></li>
+				<li> <a href="https://gecco-2024.sigevo.org/Workshops#QuantOpt" target="_new">GECCO 2024: The Genetic and Evolutionary Computation Conference</a>, Melbourne, Australia, July 2024; <a href="https://sites.google.com/view/quantopt2024" target="_new">3rd Quantum Optimization Workshop</a></li>
 				<li> <a href="https://gecco-2023.sigevo.org/HomePage" target="_new">GECCO 2023: The Genetic and Evolutionary Computation Conference</a>, Lisbon, Portugal, July 2023; <a href="https://gecco-2023.sigevo.org/Tracks#ENUM%20-%20Evolutionary%20Numerical%20Optimization" target="_new">ENUM Track</a></li>
 				<li> <a href="https://www.dagstuhl.de/23251" target="_new">Dagstuhl Seminar on Challenges in Benchmarking Optimization Heuristics</a> (23251, June 2023)</li>
 				<li> <a href="https://emo2023.liacs.leidenuniv.nl/" target="_new">EMO 2023: Evolutionary Multi-Criterion Optimization</a> ,Leiden University, March 2023.</li>
@@ -112,7 +112,7 @@
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2023 <strong>Ofer Shir</strong><br /> 
+            &copy; copyright 2024 <strong>Ofer Shir</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
