--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	</div>
 		<div id="main">		
 	                <p>I am interested in learning and optimization questions related to systems within the Natural Sciences. 
-Specifically, my fields of interest encompass Statistical Learning within Optimization and Deep Learning in Practice, Self-Supervised Learning, Algorithmically-Guided Experimentation, Combinatorial Optimization and Benchmarking (White/Gray/Black-Box), Quantum Optimization and Quantum Machine Learning. <br><br>
+Specifically, my fields of interest encompass Statistical Learning within Optimization and Deep Learning in Practice, Self-Supervised Learning, Algorithmically-Guided Experimentation, Combinatorial Optimization and Benchmarking (White/Gray/Black-Box), Quantum Optimization and Quantum Control. <br><br>
             <b>Currently:</b> <br>
             Associate Professor of Computer Science, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.<br>
             Principal Investigator, Computational Intelligence Group, <strong><a href="https://www.migal.org.il/en/computational-intelligence" target="_new">Migal-The Galilee Research Institute</a></strong>.
