--- a/publications.html
+++ b/publications.html
@@ -55,6 +55,7 @@
             </ol>
                 <h1>Journal Articles</h1>
 				<ol start="5" type="1">
+<li>Shir, O.M., Emmerich, M.: Multi-Objective Mixed-Integer Quadratic Models: A Study on Mathematical Programming and Evolutionary Computation. IEEE Transactions on Evolutionary Computation <strong>(Early Access)</strong> (2024) <a href="https://doi.org/10.1109/TEVC.2024.3374519" target="_new">DOI</a></li>
 <li>Shir, O.M., Israeli, A., Caftory, A., Zepko, G., Bloch, I.: Algorithmically-guided discovery of viral epitopes via linguistic parsing: Problem formulation and solving by soft computing. Applied Soft Computing <strong>129</strong> (2022) 109509 <a href="https://doi.org/10.1016/j.asoc.2022.109509" target="_new">DOI</a></li>
 <li>Shir, O.M., Xi, X., Rabitz, H.: Multi-level evolution strategies for high-resolution black-box control. Journal of Heuristics <strong>27</strong>(6) (2021) 1021&mdash;1055 <a href="https://doi.org/10.1007/s10732-021-09483-z" target="_new">DOI</a></li>
 <li>Shir, O.M., Yehudayoff, A.: On the covariance-Hessian relation in evolution strategies. Theoretical Computer Science <strong> 801</strong> (2020) 157&mdash;174 <a href="https://doi.org/10.1016/j.tcs.2019.09.002" target="_new">DOI</a></li>
@@ -82,7 +83,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
               <li>Siedschlag, C., Shir, O.M., B&auml;ck, T., Vrakking, M.J.J.: Evolutionary Algorithms in the Optimization of Dynamic Molecular Alignment. Optics Communications <strong>264</strong> (2006) 511&ndash;518  </li>
             </ol>
 				<h1>Peer-Reviewed Conference Proceedings</h1>
-                <ol start="29" type="1">
+                <ol start="30" type="1">
 				<li> Shir, O.M., Emmerich, M.: On the Behavior of the Mixed-Integer SMS-EMOA on Box-Constrained Quadratic Bi-Objective Models. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2023, New York, NY, USA, ACM Press (2023) 1579&ndash;1586 <a href="https://doi.org/10.1145/3583133.3596398" target="_new">dl/acm</a> </li>
 				<li> Kocaman, V., Shir, O.M., B&auml;ck, T., Belbachir, A.N.: Saliency Can Be All You Need
 In Contrastive Self-Supervised Learning. In: Proceedings of the 17th International Symposium on Visual Computing, ISVC'22 (2022). Lecture Notes in Computer Science, vol 13599. Springer, Cham <a href="https://doi.org/10.1007/978-3-031-20716-7_10" target="_new">DOI</a> </li>
