--- a/materials.html
+++ b/materials.html
@@ -60,6 +60,7 @@
                
                     <h1>Research Materials and Presentations </h1>
         <ul>
+		<li> Veysel Kocaman, Learning from small samples. Doctoral Thesis Universiteit Leiden (joint supervision with Thomas B&auml;ck, 2024): <a href="https://hdl.handle.net/1887/3719613" target="_new">dissertation Leiden-U</a></li>
 		<li> On the Behavior of the Mixed-Integer SMS-EMOA (GECCO'23 AABOH workshop presentation; Lisbon, Portugal, July 2023) <a href="gecco2023_AABOH-ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Mind the Gap (Dagstuhl Seminar on Challenges in Benchmarking Optimization Heuristics, 23251, June 2023) <a href="MindTheGap_presentationDagstuhl23251_ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Towards AI Research Agents in the Chemical Sciences (ChemRxiv preprint) <a href="https://chemrxiv.org/engage/chemrxiv/article-details/65ae48a466c1381729009633" target="_new">ChemRxiv</a></li>
