--- a/materials.html
+++ b/materials.html
@@ -60,6 +60,8 @@
                
                     <h1>Research Materials and Presentations </h1>
         <ul>
+		<li> Addressing Unboundedness in Quadratically-Constrained Mixed-Integer Problems (arXiv preprint with Guy Zepko) <a href="https://arxiv.org/abs/2405.05978" target="_new">arXiv</a> </li>
+		<li> Avoiding Redundant Restarts in Multimodal Global Optimization (arXiv preprint with Jacob de Nobel, Diederick Vermetten, Anna V. Kononova, and Thomas B&auml;ck) <a href="https://arxiv.org/abs/2405.01226" target="_new">arXiv</a> </li>
 		<li> Veysel Kocaman, Learning from small samples. Doctoral Thesis Universiteit Leiden (joint supervision with Thomas B&auml;ck, 2024): <a href="https://hdl.handle.net/1887/3719613" target="_new">dissertation Leiden-U</a></li>
 		<li> On the Behavior of the Mixed-Integer SMS-EMOA (GECCO'23 AABOH workshop presentation; Lisbon, Portugal, July 2023) <a href="gecco2023_AABOH-ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Mind the Gap (Dagstuhl Seminar on Challenges in Benchmarking Optimization Heuristics, 23251, June 2023) <a href="MindTheGap_presentationDagstuhl23251_ShirOM.pdf" target="_new">pdf</a></li>
@@ -84,7 +86,10 @@
      </ul>
             <h1>Links</h1>
                 <ul>
+				<li> <a href="https://ppsn2024.fh-ooe.at/" target="_new">PPSN 2024: The 18th International Conference on Parallel Problem Solving From Nature</a>, Hagenberg, Austria, September 2024; <a href="https://ppsn2024.fh-ooe.at/program/" target="_new">MathProg Tutorial</a></li>
+				<li> <a href="https://www.jyu.fi/en/study-with-us/summer-and-winter-schools/jyvaskyla-summer-school" target="_new">JSS 2024: The 33rd Jyv&auml;skyl&auml; Summer School </a>, Jyv&auml;skyl&auml, Finland, August 2024; <a href="https://www.jyu.fi/en/study-with-us/summer-and-winter-schools/jyvaskyla-summer-school/jyvaskyla-summer-school-course-programme" target="_new">COM3: Introduction to Quantum Computing</a></li>
 				<li> <a href="https://gecco-2024.sigevo.org/Workshops#QuantOpt" target="_new">GECCO 2024: The Genetic and Evolutionary Computation Conference</a>, Melbourne, Australia, July 2024; <a href="https://sites.google.com/view/quantopt2024" target="_new">3rd Quantum Optimization Workshop</a></li>
+				<li> <a href="https://roar-net.eu/#news" target="_new">COST Action 22137: Randomised Optimisation Algorithms Research Network (ROAR-NET)</a> (MC Member IL; WG 2)</li>
 				<li> <a href="https://gecco-2023.sigevo.org/HomePage" target="_new">GECCO 2023: The Genetic and Evolutionary Computation Conference</a>, Lisbon, Portugal, July 2023; <a href="https://gecco-2023.sigevo.org/Tracks#ENUM%20-%20Evolutionary%20Numerical%20Optimization" target="_new">ENUM Track</a></li>
 				<li> <a href="https://www.dagstuhl.de/23251" target="_new">Dagstuhl Seminar on Challenges in Benchmarking Optimization Heuristics</a> (23251, June 2023)</li>
 				<li> <a href="https://emo2023.liacs.leidenuniv.nl/" target="_new">EMO 2023: Evolutionary Multi-Criterion Optimization</a> ,Leiden University, March 2023.</li>
