--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1> contact details</h1>
             <ul>					
                 <li><label>electronic mail: </label><a href= "mailto:ofersh@telhai.ac.il">ofersh@telhai.ac.il </a></li>
-                <li><label>physical address:</label> The New Laboratories Building (6), Tel-Hai Eastern Campus, Room B02, Upper Galilee,  ISRAEL</li>							
+                <li><label>physical address:</label> The New Laboratories Building (6), Tel-Hai Eastern Campus, Room B02, Upper Galilee 1220800, ISRAEL</li>							
 				</ul>	    
             </div>
 							
@@ -84,7 +84,8 @@ Specifically, my fields of interest encompass Statistical Learning within Optimi
               <li> The C++ Programming Language (121503; Fall)</li>
               <li> Introduction to Computational Intelligence (199811; Fall)</li>
 	      <li> Advanced Topics in Object-Oriented Programming (199414; Spring)</li>
-		  <li> Workshop on Operations Research and Optimization Methods (199833; Spring) </li>
+		  <li> Introduction to Quantum Computing (199934; Spring/biannually)</li>
+		  <li> Workshop on Operations Research and Optimization Methods (199833; Spring/biannually) </li>
       </ul><br>
 	  <b> Algorithmically-Guided Scientific Discoveries (Migal's Talk, 2021):</b>
 	  <br>
