--- a/materials.html
+++ b/materials.html
@@ -60,6 +60,8 @@
                
                     <h1>Research Materials and Presentations </h1>
         <ul>
+		<li> Overcoming Coupon Collector's Syndrome when Optimizing Multimodal Domains (MMMOO workshop at PPSN-2024; Hagenberg, Upper Austria, September 2024) <a href="ShirOM_PPSN_MMMOO.pdf" target="_new">pdf</a></li>
+		<li> Introductory Mathematical Programming for EC (PPSN-2024 tutorial; Hagenberg, Upper Austria, September 2024) <a href="IntroMathProg4EC_ppsn2024_ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Addressing Unboundedness in Quadratically-Constrained Mixed-Integer Problems (arXiv preprint with Guy Zepko) <a href="https://arxiv.org/abs/2405.05978" target="_new">arXiv</a> </li>
 		<li> Avoiding Redundant Restarts in Multimodal Global Optimization (arXiv preprint with Jacob de Nobel, Diederick Vermetten, Anna V. Kononova, and Thomas B&auml;ck) <a href="https://arxiv.org/abs/2405.01226" target="_new">arXiv</a> </li>
 		<li> Veysel Kocaman, Learning from small samples. Doctoral Thesis Universiteit Leiden (joint supervision with Thomas B&auml;ck, 2024): <a href="https://hdl.handle.net/1887/3719613" target="_new">dissertation Leiden-U</a></li>
@@ -68,7 +70,6 @@
 		<li> Towards AI Research Agents in the Chemical Sciences (ChemRxiv preprint) <a href="https://chemrxiv.org/engage/chemrxiv/article-details/65ae48a466c1381729009633" target="_new">ChemRxiv</a></li>
 		<li> Lessons Learned Report: Super-Resolution for Detection Tasks in Engineering Problem-Solving <a href="https://arxiv.org/abs/2303.00364" target="_new">arXiv</a> </li>
 		<li> GWANN: Implementing deep learning in genome wide association studies (bioRxiv preprint with Nimrod Ashkenazy, Martin Feder, and Sariel Hubner) <a href="https://www.biorxiv.org/content/10.1101/2022.06.01.494275v1?rss=1" target="_new">bioRxiv</a> </li>
-		<li> Introductory Mathematical Programming for EC (GECCO'22 tutorial; Boston MA, USA, July 2022) <a href="IntroMathProg4EC_gecco2022_ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Sequential Experimentation by Evolutionary Algorithms (GECCO'22 joint tutorial with Thomas B&auml;ck; Boston MA, USA, July 2022) <a href="https://doi.org/10.1145/3520304.3533631" target="_new">ACM/dL</a></li>
 		<li> Algorithmically-Guided Postharvest by Experimental Combinatorial Optimization (GECCO'22 Presentation, July 2022) <a href="gecco2022_ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Toward an ImageNet Library of Functions for Global Optimization Benchmarking (arXiv preprint with Boris Yazmir) <a href="https://arxiv.org/abs/2206.13630" target="_new">arXiv</a> </li>
