--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ Specifically, my fields of interest encompass Statistical Learning within Optimi
         <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Head, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
 		<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Senior Lecturer, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
 	<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Research Scientist, <strong><a href="https://www.research.ibm.com/" target="_new">IBM-Research</a></strong>.</span></li>
-        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Postdoctoral Research Associate, <strong><a href="https://www.princeton.edu/" target="_new">Princeton University</a></strong>. Host: <a href="https://www.princeton.edu/chemistry/rabitz/" target="_new">Hersch Rabitz</a>.</span></li>
-        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">MSc and PhD in Computer Science, <strong><a href="https://www.leiden.edu/" target="_new">Leiden University</a></strong>. Advisors: <a href="https://natcomp.liacs.nl/" target="_new">Thomas B&auml;ck</a> and <a href="https://staff.mbi-berlin.de/vrakking/" target="_new">Marc Vrakking</a>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Postdoctoral Research Associate, <strong><a href="https://www.princeton.edu/" target="_new">Princeton University</a></strong>. Host: <a href="https://scholar.google.com/citations?hl=en&user=LI4tzS0AAAAJ" target="_new">Herschel Rabitz</a>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">MSc and PhD in Computer Science, <strong><a href="https://www.leiden.edu/" target="_new">Leiden University</a></strong>. Advisors: <a href="https://scholar.google.com/citations?hl=en&user=x7LEID0AAAAJ" target="_new">Thomas B&auml;ck</a> and <a href="https://scholar.google.nl/citations?user=10IWLVgAAAAJ&hl=en" target="_new">Marc Vrakking</a>.</span></li>
         <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px"> BSc in Physics and Computer Science, <strong><a href="https://new.huji.ac.il/" target="_new">Hebrew University of Jerusalem</a></strong>.</span></li>
       </ul> <br>
             <b>Teaching</b>:
@@ -94,9 +94,9 @@ Specifically, my fields of interest encompass Statistical Learning within Optimi
 	<b> Recent meetings</b>:
 	<br>
 	    <div id="content-wrap"><div id="content">
-		<p> &emsp; PPSN-2024, Hagenberg, Upper Austria, Sep. 2024  &emsp; &emsp;&emsp; &emsp; Dagstuhl 23251 Seminar, June 2023 <br>	
+		<p> &emsp; PPSN-2024, Hagenberg, Upper Austria, Sep. 2024  &emsp; &emsp;&emsp; &emsp; The Jyv&auml;skyl&auml; Summer School, August 2024 <br>	
                 <a href="./images/PPSN2024_with_Jacob_and-Diederick.jpg" target="_new"><img src="./images/PPSN2024_with_Jacob_and-Diederick.jpg" width=281px alt="PPSN-2024"></a>
-				<a href="./images/23251.jpg" target="_new"><img src="./images/23251.jpg" width=281px alt="Dagstuhl-23251"></a>
+				<a href="./images/JSS_intro2QC-ProfShir_summer2024.jpg" target="_new"><img src="./images/JSS_intro2QC-ProfShir_summer2024.jpg" width=281px alt="JSS_intro2QC-ProfShir_summer2024"></a>
 				<!-->
 				<!--a href="./images/gecco2022.jpg" target="_new"><img src="./images/gecco2022.jpg" width=281px alt="GECCO-2022"></a-->
 				</p>
@@ -125,7 +125,7 @@ Specifically, my fields of interest encompass Statistical Learning within Optimi
 	
 		<div class="col float-left">
 		<p>
-		&copy; copyright 2024 <strong>Ofer Shir</strong><br /> 
+		&copy; copyright 2025 <strong>Ofer Shir</strong><br /> 
 		Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
 		Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
 		</p>
