--- a/materials.html
+++ b/materials.html
@@ -87,9 +87,9 @@
      </ul>
             <h1>Links</h1>
                 <ul>
+				<li> <a href="https://gecco-2025.sigevo.org/Workshop?itemId=2339" target="_new">GECCO 2025: The Genetic and Evolutionary Computation Conference</a>, Malaga, Spain, July 2025; <a href="https://sites.google.com/view/quantopt2024" target="_new">4th Quantum Optimization Workshop</a></li>
 				<li> <a href="https://ppsn2024.fh-ooe.at/" target="_new">PPSN 2024: The 18th International Conference on Parallel Problem Solving From Nature</a>, Hagenberg, Austria, September 2024; <a href="https://ppsn2024.fh-ooe.at/program/" target="_new">MathProg Tutorial</a></li>
 				<li> <a href="https://www.jyu.fi/en/study-with-us/summer-and-winter-schools/jyvaskyla-summer-school" target="_new">JSS 2024: The 33rd Jyv&auml;skyl&auml; Summer School </a>, Jyv&auml;skyl&auml, Finland, August 2024; <a href="https://www.jyu.fi/en/study-with-us/summer-and-winter-schools/jyvaskyla-summer-school/jyvaskyla-summer-school-course-programme" target="_new">COM3: Introduction to Quantum Computing</a></li>
-				<li> <a href="https://gecco-2024.sigevo.org/Workshops#QuantOpt" target="_new">GECCO 2024: The Genetic and Evolutionary Computation Conference</a>, Melbourne, Australia, July 2024; <a href="https://sites.google.com/view/quantopt2024" target="_new">3rd Quantum Optimization Workshop</a></li>
 				<li> <a href="https://roar-net.eu/#news" target="_new">COST Action 22137: Randomised Optimisation Algorithms Research Network (ROAR-NET)</a> (MC Member IL; WG 2)</li>
 				<li> <a href="https://gecco-2023.sigevo.org/HomePage" target="_new">GECCO 2023: The Genetic and Evolutionary Computation Conference</a>, Lisbon, Portugal, July 2023; <a href="https://gecco-2023.sigevo.org/Tracks#ENUM%20-%20Evolutionary%20Numerical%20Optimization" target="_new">ENUM Track</a></li>
 				<li> <a href="https://www.dagstuhl.de/23251" target="_new">Dagstuhl Seminar on Challenges in Benchmarking Optimization Heuristics</a> (23251, June 2023)</li>
@@ -119,7 +119,7 @@
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2024 <strong>Ofer Shir</strong><br /> 
+            &copy; copyright 2025 <strong>Ofer Shir</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
