--- a/publications.html
+++ b/publications.html
@@ -71,7 +71,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
     <li>Shir, O.M., Roslund, J., Whitley, D., Rabitz, H.: Efficient retrieval of landscape Hessian: Forced optimal covariance adaptive learning. Physical Review E <strong>89</strong>(6) (2014) 063306 <a href="https://doi.org/10.1103/PhysRevE.89.063306" target="_new">DOI</a>  </li>
     <li>Shir, O.M., Roslund, J., Leghtas, Z., Rabitz, H.: Quantum Control Experiments as a Testbed for Evolutionary Multi-Objective Algorithms. Genetic Programming and Evolvable Machines <strong>13</strong>(4) (2012) 445&mdash;491 <a href="https://doi.org/10.1007/s10710-012-9164-7" target="_new">DOI</a>  </li>
     <li>Roslund, J., Shir, O.M., Dogariu, A., Miles, R., Rabitz, H.: Control of Nirtomethane Photoionization Efficiency with Shaped Femtosecond Pulses. The Journal of Chemical Physics <strong>134</strong>(15) (2011) 154301  </li>
-    <li>Cabrera, R., Shir, O.M., Wu, R., Rabitz, H.: Fidelity Between Unitary Operators and the Generation of Gates, Robust Against Off-Resonance Perturbations. Journal of Physics A: Mathematical and Theoretical <strong>44</strong>(9) (2011) 095302  </li>
+    <li>Cabrera, R., Shir, O.M., Wu, R., Rabitz, H.: Fidelity Between Unitary Operators and the Generation of Gates, Robust Against Off-Resonance Perturbations. Journal of Physics A: Mathematical and Theoretical <strong>44</strong>(9) (2011) 095302 <a href="https://doi.org/10.1088/1751-8113/44/9/095302" target="_new">DOI</a> </li>
 	<li>Laforge, F.O., Roslund, J., Shir, O.M., Rabitz, H.: Multiobjective Adaptive Feedback Control of Two-Photon Absorption Coupled with Propagation through a Dispersive Medium. Physical Review A <strong>84</strong>(1) (2011) 013401  </li>
     <li>Rouz&eacute;e, A., Ghafur, O., Vidma, K., Gijsbertsen, A., Shir, O.M., B&auml;ck, T., Meijer, A., van der Zande, W.J., Parker, D., Vrakking, M.J.J.: Evolutionary Optimization of Rotational Population Transfer. Physical Review A <strong>84</strong>(3) (2011) 033415  </li>
     <li>Shir, O.M., Emmerich, M., B&auml;ck, T.: Adaptive Niche-Radii and Niche-Shapes Approaches for Niching with the CMA-ES. Evolutionary Computation <strong>18</strong>(1) (2010) 97&ndash;126 <a href="https://doi.org/10.1162/evco.2010.18.1.18104" target="_new">DOI</a> </li>
@@ -171,7 +171,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2024 <strong>Ofer Shir</strong><br /> 
+            &copy; copyright 2025 <strong>Ofer Shir</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
