--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Specifically, my fields of interest encompass Statistical Learning within Optimi
 	    <div id="content-wrap"><div id="content">
 		<p> &emsp; PPSN-2024, Hagenberg, Upper Austria, Sep. 2024  &emsp; &emsp;&emsp; &emsp; The Jyv&auml;skyl&auml; Summer School, August 2024 <br>	
                 <a href="./images/PPSN2024_with_Jacob_and-Diederick.jpg" target="_new"><img src="./images/PPSN2024_with_Jacob_and-Diederick.jpg" width=281px alt="PPSN-2024"></a>
-				<a href="./images/JSS_intro2QC-ProfShir_summer2024.jpg" target="_new"><img src="./images/JSS_intro2QC-ProfShir_summer2024.jpg" width=281px alt="JSS_intro2QC-ProfShir_summer2024"></a>
+				<a href="./images/JSS_intro2QC-ProfShir_summer2024.JPG" target="_new"><img src="./images/JSS_intro2QC-ProfShir_summer2024.JPG" width=281px alt="JSS_intro2QC-ProfShir_summer2024"></a>
 				<!-->
 				<!--a href="./images/gecco2022.jpg" target="_new"><img src="./images/gecco2022.jpg" width=281px alt="GECCO-2022"></a-->
 				</p>
