--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1> contact details</h1>
             <ul>					
                 <li><label>electronic mail: </label><a href= "mailto:ofersh@telhai.ac.il">ofersh@telhai.ac.il </a></li>
-                <li><label>physical address:</label> The New Laboratories Building (6), Tel-Hai Eastern Campus, Room B02, Upper Galilee 1220800, ISRAEL</li>							
+                <li><label>physical address:</label> Helmsley Science Building, Tel-Hai Eastern Campus, Office B02, Upper Galilee 1220800, ISRAEL</li>							
 				</ul>	    
             </div>
 							
@@ -62,8 +62,8 @@
 	<!-- content-wrap ends here -->		
 	</div>
 		<div id="main">		
-	                <p>I am interested in learning and optimization questions related to systems within the Natural Sciences. 
-Specifically, my fields of interest encompass Statistical Learning within Optimization and Deep Learning in Practice, Self-Supervised Learning, Algorithmically-Guided Experimentation, Combinatorial Optimization and Benchmarking (White/Gray/Black-Box), Quantum Optimization and Quantum Control. <br><br>
+	                <p>I am interested in learning and optimization questions related to systems within the Natural Sciences. <br> 
+Specifically, my fields of interest encompass Learning and Optimization of Noisy Black-Box Systems / Algorithmically-Guided Experimentation /  Combinatorial Optimization, Mixed-Integer Programming and Benchmarking / Quantum Optimization and Quantum Control. <br><br>
             <b>Currently:</b> <br>
             Associate Professor of Computer Science, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.<br>
             Principal Investigator, Computational Intelligence Group, <strong><a href="https://www.migal.org.il/en/computational-intelligence" target="_new">Migal-The Galilee Research Institute</a></strong>.
