--- a/materials.html
+++ b/materials.html
@@ -63,7 +63,6 @@
 		<li> Overcoming Coupon Collector's Syndrome when Optimizing Multimodal Domains (MMMOO workshop at PPSN-2024; Hagenberg, Upper Austria, September 2024) <a href="ShirOM_PPSN_MMMOO.pdf" target="_new">pdf</a></li>
 		<li> Introductory Mathematical Programming for EC (PPSN-2024 tutorial; Hagenberg, Upper Austria, September 2024) <a href="IntroMathProg4EC_ppsn2024_ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Addressing Unboundedness in Quadratically-Constrained Mixed-Integer Problems (arXiv preprint with Guy Zepko) <a href="https://arxiv.org/abs/2405.05978" target="_new">arXiv</a> </li>
-		<li> Avoiding Redundant Restarts in Multimodal Global Optimization (arXiv preprint with Jacob de Nobel, Diederick Vermetten, Anna V. Kononova, and Thomas B&auml;ck) <a href="https://arxiv.org/abs/2405.01226" target="_new">arXiv</a> </li>
 		<li> Veysel Kocaman, Learning from small samples. Doctoral Thesis Universiteit Leiden (joint supervision with Thomas B&auml;ck, 2024): <a href="https://hdl.handle.net/1887/3719613" target="_new">dissertation Leiden-U</a></li>
 		<li> On the Behavior of the Mixed-Integer SMS-EMOA (GECCO'23 AABOH workshop presentation; Lisbon, Portugal, July 2023) <a href="gecco2023_AABOH-ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Mind the Gap (Dagstuhl Seminar on Challenges in Benchmarking Optimization Heuristics, 23251, June 2023) <a href="MindTheGap_presentationDagstuhl23251_ShirOM.pdf" target="_new">pdf</a></li>
@@ -87,7 +86,7 @@
      </ul>
             <h1>Links</h1>
                 <ul>
-				<li> <a href="https://gecco-2025.sigevo.org/Workshop?itemId=2339" target="_new">GECCO 2025: The Genetic and Evolutionary Computation Conference</a>, Malaga, Spain, July 2025; <a href="https://sites.google.com/view/quantopt2024" target="_new">4th Quantum Optimization Workshop</a></li>
+				<li> <a href="https://gecco-2025.sigevo.org/Workshop?itemId=2339" target="_new">GECCO 2025: The Genetic and Evolutionary Computation Conference</a>, Malaga, Spain, July 2025; <a href="https://sites.google.com/view/quantopt2025" target="_new">4th Quantum Optimization Workshop</a></li>
 				<li> <a href="https://ppsn2024.fh-ooe.at/" target="_new">PPSN 2024: The 18th International Conference on Parallel Problem Solving From Nature</a>, Hagenberg, Austria, September 2024; <a href="https://ppsn2024.fh-ooe.at/program/" target="_new">MathProg Tutorial</a></li>
 				<li> <a href="https://www.jyu.fi/en/study-with-us/summer-and-winter-schools/jyvaskyla-summer-school" target="_new">JSS 2024: The 33rd Jyv&auml;skyl&auml; Summer School </a>, Jyv&auml;skyl&auml, Finland, August 2024; <a href="https://www.jyu.fi/en/study-with-us/summer-and-winter-schools/jyvaskyla-summer-school/jyvaskyla-summer-school-course-programme" target="_new">COM3: Introduction to Quantum Computing</a></li>
 				<li> <a href="https://roar-net.eu/#news" target="_new">COST Action 22137: Randomised Optimisation Algorithms Research Network (ROAR-NET)</a> (MC Member IL; WG 2)</li>
@@ -102,7 +101,7 @@
 			  <li> <a href="https://liacs.leidenuniv.nl/" target="_new"> Leiden Institute of Advanced Computer Science (LIACS)</a></li>
               <li> <a href="https://www.universiteitleiden.nl/en/staffmembers/thomas-back" target="_new">Natural Computing Group at LIACS</a> (PhD Advisor I: Prof. Thomas B&auml;ck)</li>
 			  <li> <a href="https://www.amolf.nl/" target="_new">AMOLF Amsterdam</a> (PhD Advisor II: Prof. Marc Vrakking)</li>
-              <li> <a href="https://chemistry.princeton.edu/faculty/herschel-rabitz/" target="_new">Rabitz Group, Princeton University</a> (Postdoc Host: Prof. Herschel Rabitz)</li>
+              <li> <a href="https://rabitz.princeton.edu" target="_new">Rabitz Group, Princeton University</a> (Postdoc Host: Prof. Herschel Rabitz)</li>
       </ul>
 		  
                   		</div>
