--- a/materials.html
+++ b/materials.html
@@ -60,8 +60,10 @@
                
                     <h1>Research Materials and Presentations </h1>
         <ul>
+			<li> Correlated Geometric Mutations for Integer Evolution Strategies (GECCO'25 AABOH workshop presentation; Malaga, Spain, July 2025) <a href="gecco2025_AABOH-ShirOM.pdf" target="_new">pdf</a></li>
+			<li> Introductory Mathematical Programming for EC (GECCO-2025 tutorial; Malaga, Spain, July 2025) <a href="IntroMathProg4EC_gecco2025_ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Overcoming Coupon Collector's Syndrome when Optimizing Multimodal Domains (MMMOO workshop at PPSN-2024; Hagenberg, Upper Austria, September 2024) <a href="ShirOM_PPSN_MMMOO.pdf" target="_new">pdf</a></li>
-		<li> Introductory Mathematical Programming for EC (PPSN-2024 tutorial; Hagenberg, Upper Austria, September 2024) <a href="IntroMathProg4EC_ppsn2024_ShirOM.pdf" target="_new">pdf</a></li>
+		
 		<li> Addressing Unboundedness in Quadratically-Constrained Mixed-Integer Problems (arXiv preprint with Guy Zepko) <a href="https://arxiv.org/abs/2405.05978" target="_new">arXiv</a> </li>
 		<li> Veysel Kocaman, Learning from small samples. Doctoral Thesis Universiteit Leiden (joint supervision with Thomas B&auml;ck, 2024): <a href="https://hdl.handle.net/1887/3719613" target="_new">dissertation Leiden-U</a></li>
 		<li> On the Behavior of the Mixed-Integer SMS-EMOA (GECCO'23 AABOH workshop presentation; Lisbon, Portugal, July 2023) <a href="gecco2023_AABOH-ShirOM.pdf" target="_new">pdf</a></li>
