--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Specifically, my fields of interest encompass Learning and Optimization of Noisy
             <b>Teaching</b>:
             <ul>
               <!--li> <span style="font-family:'Arial','sans-serif'; ">Introduction to System Programming (121405; Fall)</span></li-->
-              <li> The C++ Programming Language (121503; Fall)</li>
+              <!--li> The C++ Programming Language (121503; Fall)</li-->
               <li> Introduction to Computational Intelligence (199811; Fall)</li>
 	      <li> Advanced Topics in Object-Oriented Programming (199414; Spring)</li>
 		  <li> Introduction to Quantum Computing (199934; Spring/biannually)</li>
