--- a/materials.html
+++ b/materials.html
@@ -88,7 +88,7 @@
      </ul>
             <h1>Links</h1>
                 <ul>
-				<li> <a href="https://gecco-2025.sigevo.org/Workshop?itemId=2339" target="_new">GECCO 2025: The Genetic and Evolutionary Computation Conference</a>, Malaga, Spain, July 2025; <a href="https://sites.google.com/view/quantopt2025" target="_new">4th Quantum Optimization Workshop</a></li>
+				<li> <a href="https://gecco-2025.sigevo.org/Workshop?itemId=2339" target="_new">GECCO 2025: The Genetic and Evolutionary Computation Conference</a>, Malaga, Spain, July 2025; 4th Quantum Optimization Workshop</li>
 				<li> <a href="https://ppsn2024.fh-ooe.at/" target="_new">PPSN 2024: The 18th International Conference on Parallel Problem Solving From Nature</a>, Hagenberg, Austria, September 2024; <a href="https://ppsn2024.fh-ooe.at/program/" target="_new">MathProg Tutorial</a></li>
 				<li> <a href="https://www.jyu.fi/en/study-with-us/summer-and-winter-schools/jyvaskyla-summer-school" target="_new">JSS 2024: The 33rd Jyv&auml;skyl&auml; Summer School </a>, Jyv&auml;skyl&auml, Finland, August 2024; <a href="https://www.jyu.fi/en/study-with-us/summer-and-winter-schools/jyvaskyla-summer-school/jyvaskyla-summer-school-course-programme" target="_new">COM3: Introduction to Quantum Computing</a></li>
 				<li> <a href="https://roar-net.eu/#news" target="_new">COST Action 22137: Randomised Optimisation Algorithms Research Network (ROAR-NET)</a> (MC Member IL; WG 2)</li>
