--- a/materials.html
+++ b/materials.html
@@ -60,6 +60,7 @@
                
                     <h1>Research Materials and Presentations </h1>
         <ul>
+			<li> Foundations of Correlated Mutations for Integer Programming (FOGA'25 poster; Leiden, The Netherlands, August 2025) <a href="Shir+Emmerich__FOGA25.pdf" target="_new">pdf</a></li>
 			<li> Correlated Geometric Mutations for Integer Evolution Strategies (GECCO'25 AABOH workshop presentation; Malaga, Spain, July 2025) <a href="gecco2025_AABOH-ShirOM.pdf" target="_new">pdf</a></li>
 			<li> Introductory Mathematical Programming for EC (GECCO-2025 tutorial; Malaga, Spain, July 2025) <a href="IntroMathProg4EC_gecco2025_ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Overcoming Coupon Collector's Syndrome when Optimizing Multimodal Domains (MMMOO workshop at PPSN-2024; Hagenberg, Upper Austria, September 2024) <a href="ShirOM_PPSN_MMMOO.pdf" target="_new">pdf</a></li>
