--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ Specifically, my fields of interest encompass Learning and Optimization of Noisy
               <!--li> <span style="font-family:'Arial','sans-serif'; ">Introduction to System Programming (121405; Fall)</span></li-->
               <!--li> The C++ Programming Language (121503; Fall)</li-->
               <li> Introduction to Computational Intelligence (199811; Fall)</li>
-	      <li> Advanced Topics in Object-Oriented Programming (199414; Spring)</li>
-		  <li> Introduction to Quantum Computing (199934; Spring/biannually)</li>
+	      <li> Advanced Topics in Object-Oriented Programming (199414; Fall)</li>
+		  <li> Introduction to Quantum Computing (199934; Spring)</li>
 		  <li> Workshop on Operations Research and Optimization Methods (199833; Spring/biannually) </li>
       </ul><br>
 	  <b> Algorithmically-Guided Scientific Discoveries (Migal's Talk, 2021):</b>
