--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
             </ol>
                 <h1>Journal Articles</h1>
 				<ol start="5" type="1">
-<li> Zepko, G., Shir, O.M.: All-Quadratic Mixed-Integer Problems: A Study on Evolution Strategies and Mathematical Programming. Evolutionary Computation Journal (2025) ACCEPTED FOR PUBLICATION</li>
+<li> Zepko, G., Shir, O.M.: All-Quadratic Mixed-Integer Problems: A Study on Evolution Strategies and Mathematical Programming. Evolutionary Computation Journal (2025) 1&mdash;27 <a href="https://doi.org/10.1162/evco.a.29" target="_new">DOI</a></li>
 <li>Shir, O.M., Emmerich, M.: Multi-Objective Mixed-Integer Quadratic Models: A Study on Mathematical Programming and Evolutionary Computation. IEEE Transactions on Evolutionary Computation <strong>29</strong>(3) (2025) 661&mdash;675 <a href="https://doi.org/10.1109/TEVC.2024.3374519" target="_new">DOI</a></li>
 <li> Shulman, D., Israeli, A., Botnaro, Y., Margalit, O., Tamir, O., Naschitz, S., Gamrasni, D., Shir, O.M., Dattner, I.: Physics-Guided Inverse Regression for Crop Quality Assessment. JABES <strong>(Early Access)</strong> (2024) <a href="https://doi.org/10.1007/s13253-024-00643-9" target="_new">DOI</a> </li>
 <li>Shir, O.M., Israeli, A., Caftory, A., Zepko, G., Bloch, I.: Algorithmically-guided discovery of viral epitopes via linguistic parsing: Problem formulation and solving by soft computing. Applied Soft Computing <strong>129</strong> (2022) 109509 <a href="https://doi.org/10.1016/j.asoc.2022.109509" target="_new">DOI</a></li>
