--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<!-- content-wrap starts here -->
 	<div id="content-wrap"><div id="content">		
 	<!--div class="headerphoto"></div-->
-		<img src="./images/header21.jpg" width=520px alt="Prof. Ofer M. Shir">
+		<img src="./images/SHIR1.png" width=520px alt="Prof. Ofer M. Shir">
 			
 		<!--div style="clear:both;"></div-->
         <div id="sidebar" >
