--- a/publications.html
+++ b/publications.html
@@ -45,11 +45,11 @@
                
                     <h1>Books</h1>
                      <ol start="1" type="1">
-              <li>Shir, O.M.:       Niching in Derandomized Evolution Strategies and its Applications in Quantum Control: A Journey from Organic Diversity to Conceptual Quantum Designs. Thesis Universiteit Leiden. ISBN: 978-90-6464-256-2. Printed in       the Netherlands, 2008. <a href="OferMichaelShir_PhDmanuscript.pdf" target="_blank">pdf</a></li>
+              <li>Shir, O.M.:       Niching in Derandomized Evolution Strategies and its Applications in Quantum Control: A Journey from Organic Diversity to Conceptual Quantum Designs. Thesis Universiteit Leiden. ISBN: 978-90-6464-256-2. Printed in the Netherlands, 2008. <a href="OferMichaelShir_PhDmanuscript.pdf" target="_blank">pdf</a></li>
             </ol>
                 <h1>Book Chapters</h1>
                 	<ol start="2" type="1">
-    	      <li> Emmerich, M., Shir, O.M., Wang, H.: Evolution Strategies. In: Handbook of Heuristics. Springer International Publishing (2018) <a href="https://link.springer.com/referenceworkentry/10.1007/978-3-319-07153-4_13-1" target="_new">SpringerLink</a></li>
+    	      <li> Emmerich, M., Shir, O.M., Wang, H.: Evolution Strategies. In: Handbook of Heuristics. Springer Cham (2025) <a href="https://doi.org/10.1007/978-3-032-00385-0_13" target="_new">DOI</a></li>
               <li>Shir, O.M.: Niching in Evolutionary Algorithms. In: Handbook of Natural Computing: Theory, Experiments, and Applications. Springer-Verlag, Berlin-Heidelberg, Germany (2012) 1035&mdash;1069   </li>
               <li>Shir, O.M., B&auml;ck, T.: Niching Methods: Speciation Theory Applied for Multimodal Function Optimization. In: Algorithmic BioProcesses. Springer-Verlag, Berlin Heidelberg, Germany(2009) 705&ndash;730  </li>
             </ol>
@@ -86,7 +86,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
             </ol>
 				<h1>Peer-Reviewed Conference Proceedings</h1>
                 <ol start="32" type="1">
-				<li> Shir, O.M., Emmerich, M.: Foundations of Correlated Mutations for Integer Programming. In: Proceedings of the 18th ACM/SIGEVO Conference on Foundations of Genetic Algorithms, FOGA-2025, New York, NY, USA, ACM Press (2025) 285&ndash;296 <a href="https://doi.org/10.1145/3729878.3746698" target="_new">DOI</a> </li> </li>	
+				<li> Shir, O.M., Emmerich, M.: Foundations of Correlated Mutations for Integer Programming. In: Proceedings of the 18th ACM/SIGEVO Conference on Foundations of Genetic Algorithms, FOGA-2025, New York, NY, USA, ACM Press (2025) 285&ndash;296 <a href="https://doi.org/10.1145/3729878.3746698" target="_new">DOI</a>, <a href="pap110-Shir+Emmerich__supp.pdf" target="_new">supplementary material</a> </li>	
 				<li> Shir, O.M., Emmerich, M.: Correlated Geometric Mutations for Integer Evolution Strategies. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2025, New York, NY, USA, ACM Press (2025) 1825&ndash;1832 <a href="https://doi.org/10.1145/3712255.3734283" target="_new">DOI</a> </li>
 				<li> de Nobel, J., Vermetten, D., Kononova, A., Shir, O.M., B&auml;ck, T.: Avoiding Redundant Restarts in Multimodal Global Optimization. Affenzeller, M., et al. Parallel Problem Solving from Nature - PPSN XVIII. PPSN 2024. Lecture Notes in Computer Science, vol 15149. Springer, Cham (2024) 268&ndash;283 <a href="https://doi.org/10.1007/978-3-031-70068-2_17" target="_new">DOI</a> </li>
 				<li> Shir, O.M., Emmerich, M.: On the Behavior of the Mixed-Integer SMS-EMOA on Box-Constrained Quadratic Bi-Objective Models. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2023, New York, NY, USA, ACM Press (2023) 1579&ndash;1586 <a href="https://doi.org/10.1145/3583133.3596398" target="_new">DOI</a> </li>
